# advent-of-code2022

./: .flake8  .gitignore  README.md  pyproject.toml
adventofcode2022/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day18.py  day20.py  day21.py
tests/: test_day02.py  test_day03.py  test_day09.py  test_day14.py  test_day15.py
