[tool.poetry]
name = "adventofcode2022"
version = "0.1.0"
description = ""
authors = ["John Hendrick <93149584+johnh-mns@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
pytest = "^7.2.0"
black = "^22.10.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
